--- a/L3_Context.ipynb
+++ b/L3_Context.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ae1c3c11",
    "metadata": {},
    "source": [
     "# Lab 3, Context"
@@ -11,7 +10,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0329c75a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +30,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab64c3f6",
    "metadata": {},
    "source": [
     "# Setting Things Up"
@@ -41,7 +38,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c8223209",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +123,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bf3c5c03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +149,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f2362c39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +162,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "523ebb80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +171,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "320b7388",
    "metadata": {},
    "source": [
     "# Context"
@@ -187,7 +179,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "18863f0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +191,6 @@
   },
   {
    "cell_type": "raw",
-   "id": "ae605ca2",
    "metadata": {},
    "source": [
     "# training with context code\n",
@@ -248,7 +238,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e8c54d91",
    "metadata": {},
    "outputs": [
     {
@@ -261,14 +250,13 @@
    ],
    "source": [
     "# load in pretrain model weights and set to eval mode\n",
-    "nn_model.load_state_dict(torch.load(f\"{save_dir}/context_model_trained.pth\", map_location=device))\n",
+    "nn_model.load_state_dict(torch.load(f\"{save_dir}/context_model_31.pth\", map_location=device))\n",
     "nn_model.eval() \n",
     "print(\"Loaded in Context Model\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7b41e705",
    "metadata": {},
    "source": [
     "# Sampling with context"
@@ -277,7 +265,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7915952e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +280,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a9896c23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +312,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c2e0f395",
    "metadata": {},
    "outputs": [
     {
@@ -29386,7 +29371,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "8be29d71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29404,7 +29388,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e99e5098",
    "metadata": {},
    "outputs": [
     {
@@ -29445,7 +29428,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "349adf6a",
    "metadata": {},
    "outputs": [
     {
@@ -29483,7 +29465,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0395a02",
    "metadata": {},
    "source": [
     "# Acknowledgments\n",
@@ -29495,7 +29476,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bc4a62f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -29503,7 +29483,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -29517,7 +29497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
